@@ -8,6 +8,7 @@ $mini_cal_display = PHPWS_Settings::get('calendar', 'display_mini');
 
 if ($mini_cal_display == MINI_CAL_SHOW_ALWAYS ||
     ($mini_cal_display == MINI_CAL_SHOW_FRONT && PHPWS_Core::atHome())) {
+    Layout::addStyle('calendar');
     
     $Calendar = new PHPWS_Calendar;
     $Calendar->loadUser();
@@ -15,6 +16,11 @@ if ($mini_cal_display == MINI_CAL_SHOW_ALWAYS ||
     
     Layout::add($lil_calendar, 'calendar', 'minimonth');
     
+    $upcoming = $Calendar->user->upcomingEvents();
+    
+    if ($upcoming) {
+        Layout::add($upcoming, 'calendar', 'upcoming');
+    }
  }
 
 ?>
