@@ -1,3 +1,15 @@
+23 April 2007
++ Can now choose to show upcoming events.
++ Removed schedule created message when using javascript popup
++ Moved getEvents function in the Schedule class
++ Increase calendar event form's popup height
++ Reformated schedule form
++ Updated files: conf/config.php,
+                 templates/admin/forms/edit_schedule.tpl
+                 templates/style.css,
+                 templates/view/upcoming.tpl
+
+
 13 April 2007
 + Bug # 1699659 - Calendar will not show 'Add Event' link if a
   schedule has not been created. Instead, the create schedule link
